# demo-user-service

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: docker.env
config/prometheus/: prometheus.yml
dbschema/: default.esdl
dbschema/migrations/: 00001-m166uap.edgeql  00002-m13tj4q.edgeql  00003-m1ndl76.edgeql  00004-m1t4tg6.edgeql
demo_user_service/api/: main.py
demo_user_service/api/common/: __init__.py  config.py  contracts.py  dependencies.py  exception_handlers.py  lifespan.py
demo_user_service/api/teams/: contracts.py  routes.py
demo_user_service/api/users/: contracts.py  routes.py
demo_user_service/core/: __init__.py  errors.py  models.py  predicates.py  protocols.py  validators.py
demo_user_service/service/: __init__.py  auth.py  cache.py  edgedb.py  store_cache.py
demo_user_service/service/queries/: __init__.py  delete_user.edgeql  insert_team.edgeql  insert_user.edgeql  select_team_by_id.edgeql  select_teams.edgeql  select_user_by_id.edgeql  select_user_by_login.edgeql  select_users.edgeql  update_user_add_team_link.edgeql  update_user_remove_team_link.edgeql  update_user_team_link.edgeql
tests/: load.py
